# governance-iot-platform

./: .gitignore  .notes.txt.swp  docker-compose.yml  init-databases.sql  notes.txt
application-layer/bff/: pom.xml  start.sh
application-layer/spa/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
application-layer/spa/src/: App.vue  main.ts
mbroker-main/: Cargo.toml  README.md  build.rs  docker-compose.yml
mbroker-main/.grpc_gen/: messaging_pb2.py  messaging_pb2_grpc.py
mbroker-main/config/: server.yml
mbroker-main/docker/: dockerfile
mbroker-main/proto/: event.proto  messaging.proto
mbroker-main/src/: log.rs  main.rs
mbroker-main/src/config/: config.rs
mbroker-main/src/event/: event.rs
mbroker-main/src/messaging/: messaging.rs
mbroker-main/src/persistence/: persistence.rs
mbroker-main/src/test/: test.rs
mosquitto/config/: .regras_acesso.acl.swp  mosquitto.conf  regras_acesso_example.acl
perceptive-layer/GOVERNANCE_FIRMWARE/: .gitignore  CMakeLists.txt  sdkconfig.defaults
perceptive-layer/GOVERNANCE_FIRMWARE/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
perceptive-layer/GOVERNANCE_FIRMWARE/main/src/: AppState.cpp  AppState.h  CaptivePortal.cpp  CaptivePortal.h  CommandProcessor.cpp  CommandProcessor.h  CryptoManager.cpp  CryptoManager.h  HttpService.cpp  MqttManager.cpp  MqttManager.h  OtaManager.cpp  OtaManager.h  PayloadManager.cpp  PayloadManager.h  WatchdogManager.cpp  WifiManager.h
perceptive-layer/GOVERNANCE_FIRMWARE_OPERATIONAL/main/: main.cpp
service-layer/event-handler/: pom.xml  start.sh
service-layer/infra-executor/: Dockerfile  go.mod  main.go
(+461 files in other folders)
