[package]
name = "mbroker"
version = "1.0.0"
edition = "2024"

[dependencies]
# GRPC
prost = "0.12.1"
tonic = {version="0.10.2",features = ["tls"]}
tokio = {version="1.33.0",features = ["rt-multi-thread", "macros"]}
tokio-stream = { version = "0.1.14", features = ["net"]}
futures = "0.3.28"

# JSON/YAML
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"

# LOGS
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["gzip"] }
byte-unit = "4.0.19"

# SQLITE
rusqlite = { version = "0.31.0", features = ["chrono"]}
tokio-rusqlite = "0.5.1"
chrono = "0.4.35"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"]}

# TESTS
tempfile = "3.10.1"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.10.2"
